<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:text="Confirm Transaction"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingVertical="6dp"
        />

    <TextView
        android:id="@+id/recipientTextPrompt2"
        android:layout_width="157dp"
        android:layout_height="32dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/send_recipient"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <TableLayout
        android:id="@+id/namePanel"
        android:layout_width="189dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/recipientTextPrompt2"
        app:layout_constraintTop_toBottomOf="@+id/recipientTextPrompt2">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/last_name_prompt" />
            <EditText
                android:id="@+id/lastNameEditTextPersona"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:width="200px"
                android:text="resolving"
                android:textAppearance="@style/pendingTextStyle"
                android:imeOptions="actionDone"
                android:inputType="textShortMessage"
                android:singleLine="true" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/first_name_prompt" />
            <EditText
                android:id="@+id/firstNameEditTextPersona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200px"
                android:text="resolving"
                android:textAppearance="@style/pendingTextStyle"
                android:imeOptions="actionDone"
                android:inputType="textShortMessage"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/sendAmountText"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="number|numberDecimal"
        android:text="0"
        android:singleLine="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/namePanel"
        app:layout_constraintTop_toBottomOf="@+id/sendAmountTextPrompt" />

    <TextView
        android:id="@+id/assetNameText"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:text="@string/coin_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/sendAmountText"
        app:layout_constraintTop_toTopOf="@+id/sendAmountText" />

    <TextView
        android:id="@+id/sendAmountTextPrompt"
        android:layout_width="164dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/send_amount_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/namePanel"
        app:layout_constraintTop_toBottomOf="@+id/editTextReason" />

    <TextView
        android:id="@+id/textViewReason"
        android:layout_width="154dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="Reason"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/namePanel"
        app:layout_constraintTop_toBottomOf="@+id/namePanel" />

    <EditText
        android:id="@+id/editTextReason"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:text="resolving"
        android:textAppearance="@style/pendingTextStyle"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/namePanel"
        app:layout_constraintTop_toBottomOf="@+id/textViewReason" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmSendButton"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/send_confirm_prompt"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/assetNameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>